--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ path = "src/day1/main.rs"
 [[bin]]
 name = "day2"
 path = "src/day2/main.rs"
+
+[[bin]]
+name = "day3"
+path = "src/day3/main.rs"
+
+[[bin]]
+name = "day4"
+path = "src/day4/main.rs"
