--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Jamie Brynes <jamiebrynes7@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "machine"
+path = "src/machine/lib.rs"
+
 [[bin]]
 name = "day1"
 path = "src/day1/main.rs"
@@ -19,3 +23,7 @@ path = "src/day3/main.rs"
 [[bin]]
 name = "day4"
 path = "src/day4/main.rs"
+
+[[bin]]
+name = "day5"
+path = "src/day5/main.rs"
